--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
                 <img class="absolute left-[8.68rem] top-[3.7rem] size-[1.4rem]" src="assets/images/etoile.svg" alt="etoile">
                 <img class="absolute left-[27.4rem] top-[21.45rem] size-[1.4rem]" src="assets/images/etoile.svg" alt="etoile">
             </div>
-            <div></div>
         </header>
+        <div class="flex gap-[2.6rem] items-center justify-center h-[5.6rem] border-b-[0.055rem] border-[#FFFFFF33]">
+            <span class="text-[white] text-[1.4rem] font-[400] font-(--font-poppins)">Framer</span>
+            <img src="assets/images/asterice.svg" alt="asterice">
+            <span class="text-[white] text-[1.4rem] font-[400] font-(--font-poppins)">Webflow</span>
+            <img src="assets/images/asterice.svg" alt="asterice">
+            <span class="text-[white] text-[1.4rem] font-[400] font-(--font-poppins)">Figma</span>
+            <img src="assets/images/asterice.svg" alt="asterice">
+        </div>
 
 
     </body>
