body:first section ajouter

--- a/index.html
+++ b/index.html
@@ -84,6 +84,52 @@
             <span class="text-[white] text-[1.4rem] font-[400] font-(--font-poppins)">Figma</span>
             <img src="assets/images/asterice.svg" alt="asterice">
         </div>
+        <div class="px-[2.3rem] mt-[4.7rem] flex flex-col gap-[5.2rem]">
+            <div class="flex gap-[1.2rem] items-center">
+                <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">My process to design</h1>
+                <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+            </div>
+            <div class="flex flex-col gap-[0.8rem] text-[white]">
+                <div class="flex gap-[2.833rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem]">
+                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >1</span>
+                        <hr class="bg-[white] w-[0.05rem] h-[15rem]">
+                    </div>
+                    <div class="flex flex-col gap-[1.4rem]">
+                        <div><img class="size-[2.4rem]" src="assets/images/cercle1.svg" alt="1"></div>
+                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 1: Product design Research</h1>
+                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                        <div class="flex p-[0.15rem] w-[8.3rem] rounded-[2rem]" id="borderlinear">
+                            <button class="text-[#FFFFFF] bg-[#101111] text-[0.9rem] w-[8.3rem] h-[2.2rem] rounded-[2rem] font-[400] font-(--font-poppins)">
+                                See Examples
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex gap-[2.833rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem]">
+                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >2</span>
+                        <hr class="bg-[white] w-[0.05rem] h-[10rem]">
+                    </div>
+                    <div class="flex flex-col gap-[1.4rem]">
+                        <div><img class="size-[2.4rem]" src="assets/images/cercle2.svg" alt="2"></div>
+                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 2: UI design in figma</h1>
+                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                    </div>
+                </div>
+                <div class="flex gap-[2.833rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem]">
+                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >3</span>
+                        <hr class="bg-[white] w-[0.05rem] h-[2rem]">
+                    </div>
+                    <div class="flex flex-col gap-[1.4rem]">
+                        <div><img class="size-[2.4rem]" src="assets/images/cercle3.svg" alt="3"></div>
+                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 3: No-code develop in webflow</h1>
+                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </body>
