--- a/index.html
+++ b/index.html
@@ -130,6 +130,42 @@
                 </div>
             </div>
         </div>
+        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[3.2rem] mb-[6.4rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Some featured projects</h1>
+            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        </div>
+        <div class="flex flex-col gap-[8.1rem] items-center px-[2.3rem]">
+            <div class="flex flex-col gap-[3.1rem]">
+                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div>
+                    <img src="assets/images/1.svg" alt="number">
+                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">canal 2 page's</h1>
+                </div>
+            </div>
+            <div class="flex flex-col gap-[3.1rem]">
+                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div>
+                    <img src="assets/images/2.svg" alt="number">
+                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">landing page page's</h1>
+                </div>
+            </div>
+            <div class="flex flex-col gap-[3.1rem]">
+                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div>
+                    <img src="assets/images/3.svg" alt="number">
+                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">wedding invite</h1>
+                </div>
+            </div>
+        </div>
+        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[3.2rem] mb-[4.4rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
+            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        </div>
+        <div class="px-[2.3rem]flex size-[10rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AF]  via-[#151515]to-[#151515]">
+            <div>
+
+            </div>
+        </div>
 
 
     </body>
