--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
         </div>
         <div class="flex flex-col gap-[8.1rem] items-center px-[2.3rem]">
             <div class="flex flex-col gap-[3.1rem]">
-                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/projetcanal2.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/1.svg" alt="number">
                     <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">canal 2 page's</h1>
                 </div>
             </div>
             <div class="flex flex-col gap-[3.1rem]">
-                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/ladingpage.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/2.svg" alt="number">
-                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">landing page page's</h1>
+                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">landing page's</h1>
                 </div>
             </div>
             <div class="flex flex-col gap-[3.1rem]">
-                <div class="size-[32rem] bg-pink-300"></div> <!--ici on ajouteras une image de notre projet -->
+                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/wedding.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/3.svg" alt="number">
                     <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">wedding invite</h1>
@@ -161,12 +161,78 @@
             <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
             <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
         </div>
-        <div class="px-[2.3rem]flex size-[10rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AF]  via-[#151515]to-[#151515]">
-            <div>
-
+        <div class="flex items-center gap-[1.4rem] flex-col">
+            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+                    <div class="flex justify-between items-center"> 
+                        <div class="flex items-center gap-[0.9rem]">
+                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                            <div class="flex flex-col justify-between gap-[0.8rem]">
+                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                            </div>
+                        </div>
+                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                    </div>
+                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                        s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    </div>
+                </div>
+            </div>
+            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+                    <div class="flex justify-between items-center"> 
+                        <div class="flex items-center gap-[0.9rem]">
+                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                            <div class="flex flex-col justify-between gap-[0.8rem]">
+                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                            </div>
+                        </div>
+                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                    </div>
+                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                        s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    </div>
+                </div>
+            </div>
+            <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
+                <div class="bg-[#101111] flex-col flex px-[2rem] py-[2.6rem] rounded-[2rem] gap-[2rem]">
+                    <div class="flex justify-between items-center"> 
+                        <div class="flex items-center gap-[0.9rem]">
+                            <div class="rounded-[50%] size-[4rem] bg-[gray]"></div>
+                            <div class="flex flex-col justify-between gap-[0.8rem]">
+                                <h1 class="text-[white] [1.35rem] font-[400] font-(--font-poppins)">Client Name .</h1>
+                                <p class="text-[white] [0.99rem] font-[400] font-(--font-poppins)">Product designer</p>
+                            </div>
+                        </div>
+                        <div><img src="assets/images/virgule.svg" alt=""></div>
+                    </div>
+                    <div class="text-[white] text-[1.16rem] font-[400] font-(--font-poppins)">
+                        s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    </div>
+                </div>
+            </div>
+        </div>  
+        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[7.2rem] mb-[1.9rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
+            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        </div>  
+        <div class="flex flex-col gap-[1.5rem] px-[2.7rem]">
+            <p class="text-[white] text-[0.9rem] font-[400] font-(--font-poppins)">Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
+            <div class="flex items-center w-[10.1rem] p-[0.15rem] rounded-[2rem]" id="borderlinear">
+                <button class="text-[#101111] text-[0.9rem]  px-[1rem] py-[0.5rem] rounded-[2rem] bg-gradient-to-r from-[#7A87FB] to-[#FFD49C] font-[500] font-(--font-poppins)">
+                    Send us a message
+                </button>
             </div>
         </div>
-
+        
+      
 
     </body>
 </html>
+<!-- 
+
+
+
+ -->
