--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <!-- menu -->
                 <div class="flex items-center justify-center p-[0.15rem] rounded-[2rem]" id="borderlinear" >
-                    <img class="px-[1rem] py-[0.6rem] border-[0.2rem] border-[#1C1C1C] rounded-[3rem] bg-[#292929]"src="assets/images/menu.svg" alt="">
+                    <img class="px-[1rem] py-[0.6rem] border-[0.2rem] border-[#1C1C1C] rounded-[3rem] bg-[#292929]"src="assets/images/menu.svg" alt="image menu">
                 </div>
 
 
@@ -135,22 +135,22 @@
             <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
         </div>
         <div class="flex flex-col gap-[8.1rem] items-center px-[2.3rem]">
-            <div class="flex flex-col gap-[3.1rem]">
-                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/projetcanal2.png)] bg-[contain] bg-no-repeat"></div>
+            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
+                <div class="w-[32rem] h-[15.7rem]  bg-[url(assets/images/projetcanal2.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/1.svg" alt="number">
                     <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">canal 2 page's</h1>
                 </div>
             </div>
-            <div class="flex flex-col gap-[3.1rem]">
-                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/ladingpage.png)] bg-[contain] bg-no-repeat"></div>
+            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
+                <div class="w-[32rem] h-[15.7rem]  bg-[url(assets/images/ladingpage.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/2.svg" alt="number">
                     <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">landing page's</h1>
                 </div>
             </div>
-            <div class="flex flex-col gap-[3.1rem]">
-                <div class="w-[32rem] h-[29.7rem]  bg-[url(assets/images/wedding.png)] bg-[contain] bg-no-repeat"></div>
+            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
+                <div class="w-[32rem] h-[20.7rem] bg-[url(assets/images/wedding.png)] bg-[contain] bg-no-repeat"></div>
                 <div>
                     <img src="assets/images/3.svg" alt="number">
                     <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">wedding invite</h1>
@@ -226,13 +226,29 @@
                 </button>
             </div>
         </div>
-        
-      
-
+        <!-- footer -->
+        <div class="flex px-[5rem] mt-[9rem] flex-col gap-[2rem]">
+            <div class="flex items-center justify-center p-[0.15rem] rounded-[2rem]" id="borderlinear" >
+                <div class="flex items-center justify-between p-[0.15rem] rounded-[2rem] bg-[#1C1C1C] w-[100%]">
+                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
+                        <img src="assets/images/x.svg" alt="x">
+                    </div>
+                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
+                        <img src="assets/images/dribble.svg" alt="x">
+                    </div>
+                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
+                        <img src="assets/images/insta.svg" alt="x">
+                    </div>
+                    <div class="flex px-[1rem] py-[0.6rem] rounded-[3rem] bg-[#292929]">
+                        <img src="assets/images/facebook.svg" alt="x">
+                    </div>
+                </div>    
+            </div>
+            <div class="flex gap-[0.9rem]">
+                <img class="size-[3.322rem]" src="assets/images/logo.svg" alt="logo">
+                <span class="text-[white] text-[1.812rem] font-[400] font-(--font-poppins)">znisa</span>
+            </div>
+        </div>
     </body>
 </html>
-<!-- 
 
-
-
- -->
